Fix button padding on mobile

--- a/ui/scss/component/_card.scss
+++ b/ui/scss/component/_card.scss
@@ -93,7 +93,7 @@
     }
 
     > * {
-      padding-bottom: var(--spacing-m);
+      // padding-bottom: var(--spacing-m);
     }
     flex-flow: wrap;
     justify-content: space-between;
